Fix skeleton on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ h2 {
 }
 
 h1 {
-  @apply text-7xl font-bold;
+  @apply sm:text-7xl text-2xl font-bold;
 }
 
 .client-input {
@@ -37,8 +37,15 @@ h1 {
 /* End of the carousel styles here */
 
 .image-opacity-gradient {
-  -webkit-mask-image: -webkit-gradient(linear, top, bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 60vh);
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 60vh);
+  -webkit-mask-image: -webkit-gradient(linear, top, bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 100%);
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 100%);
+}
+
+@media screen and (min-width: 640px) {
+  .image-opacity-gradient {
+    -webkit-mask-image: -webkit-gradient(linear, top, bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 60vh);
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0, rgba(0, 0, 0, 0) 60vh);
+  }
 }
 
 .ais-SearchBox {
@@ -63,4 +70,8 @@ h1 {
 
 .ais-Hits a {
   @apply font-medium rounded text-gray-300 hover:bg-primary hover:text-primary-content transition-all;
+}
+
+.h-screen {
+  height: -webkit-fill-available
 }
